# xenotropic

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  REFACTORING_STATUS.md  pyproject.toml
.claude/: settings.json
examples/: simple_example.py
experiments/core_estimation/: experiment.py  plot.py  run_experiment.py  visualize_experiments.py
experiments/simple/: estimate_cores.py  experiment.py  generate_synthetic.py  generate_trajectories.py  run_estimation_with_synthetic.py  run_experiment.py  schemas.py  utils.py  visualize_experiment.py  viz.py  viz_queer.py
exploration/: README.md  __init__.py
exploration/analysis/: __init__.py  core_estimator.py
exploration/collection/: __init__.py  trajectory_collector.py
exploration/common/: __init__.py  explorer.py  generator.py  model.py  model_runner.py  runner.py  schemas.py
exploration/estimators/: __init__.py  brute_estimator.py
exploration/explorers/: __init__.py  brute_searcher.py  greedy.py  sampling.py
exploration/generators/: __init__.py  cloud.py  greedy.py  sampling.py
exploration/viz/: visualize_statistic_estimation.py
outputs/read/: example.tex  example.typ  queer_data_20251222_160442.json  queer_dynamics.tex
scripts/: README.md  estimate_normativity.py  generate_by_forking_paths.py  generate_by_seeking_entropy.py  generate_by_simple_sampling.py  run_full_experiment.py  score_trajectories.py  test.sh
scripts/schemas/: __init__.py  default_config.py  estimation.py  generation.py  scoring.py  script_utils.py
src/: README.md  __init__.py
src/common/: README.md  __init__.py  auto_export.py  base_schema.py  binary_fork.py  branching_node.py  device_utils.py  file_io.py  log.py  seed.py  token_trajectory.py  token_tree.py  viz_utils.py
src/inference/: README.md  __init__.py  embedding_runner.py  generated_trajectory.py  model_runner.py
src/viz/: README.md  __init__.py  plot.py
tests/: __init__.py  conftest.py
tests/exploration/: __init__.py  test_brute_searcher.py  test_generator.py  test_runner.py
tests/integration/: __init__.py  test_model_compatibility.py  (+1 more)
tools/: __init__.py  continuation_scorer.py  download_models.py  judge_string.py
trials/: README.md
wanderings/: README.md  analyze_distributions.py  core_estimation.py  hivemind.py  simple_explore.py  simple_test.py
xenotechnics/: README.md  __init__.py
(+379 files in other folders)
